using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant : MonoBehaviour
{
    public const string TAG_PLAYER = "Player";
    public const string TAG_BOT = "Bot";
    public const string ANIM_RUN = "isRun";
    public const string ANIM_DODGE = "doDodge";
    public const string ANIM_JUMP = "doJump";
    public const string ANIM_SWAP = "doSwap";
    public const string ANIM_SWING = "doSwing";
    public const string ANIM_SHOT = "doShot";
}
